--- a/index.html
+++ b/index.html
@@ -3,20 +3,42 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>FLEXBOX</title>
 </head>
 <body>
 	<header>
-		
+		<h1>Котики бывают разные</h1>
 	</header>
 
 	<main>
-		
+		<figure class="">
+			<p><img src="kotiki.jpg"></p>
+			<figcaption>Удивленно-офигевающий</figcaption>
+		</figure>
+
+		<figure class="">
+			<p><img src="kot.jpg"></p>
+			<figcaption>Я цыпленок, отстаньте</figcaption>
+		</figure>
+
+		<figure class="">
+			<p><img src="kotiki-12.jpg"></p>
+			<figcaption>Милая конфетка</figcaption>
+		</figure>
+
+		<figure class="">
+			<p><img src="kotiko.jpg"></p>
+			<figcaption>Сама доброта</figcaption>
+		</figure>
+
+		<figure class="">
+			<p><img src="kotik.jpg"></p>
+			<figcaption>Пушистая грация</figcaption>
+		</figure>
 	</main>
 
 	<footer class="footer">
-    	<p>группа 201-321</p>
     	<p>Aвтор работы: ШУНАЕВА ЕКАТЕРИНА АЛЕКСЕЕВНА</p>
     </footer>
 </body>
