--- a/index.html
+++ b/index.html
@@ -12,34 +12,55 @@
 	</header>
 
 	<main>
-		<figure class="">
-			<p><img src="kotiki.jpg"></p>
-			<figcaption>Удивленно-офигевающий</figcaption>
-		</figure>
+		<div class="flex-container">
+			<figure class="my-flex-block">
+				<img class="img1" src="kotiki.jpg">
+				<figcaption>Удивленно-офигевающий</figcaption>
+			</figure>
 
-		<figure class="">
-			<p><img src="kot.jpg"></p>
-			<figcaption>Я цыпленок, отстаньте</figcaption>
-		</figure>
+			<figure class="my-flex-block">
+				<img class="img2" src="kot.jpg">
+				<figcaption>Я цыпленок, отстаньте</figcaption>
+			</figure>
 
-		<figure class="">
-			<p><img src="kotiki-12.jpg"></p>
-			<figcaption>Милая конфетка</figcaption>
-		</figure>
+			<figure class="my-flex-block">
+				<img class="img3" src="kotiki-12.jpg">
+				<figcaption>Милая конфетка</figcaption>
+			</figure>
+		</div>
 
-		<figure class="">
-			<p><img src="kotiko.jpg"></p>
-			<figcaption>Сама доброта</figcaption>
-		</figure>
+		<div class="flex-container2">
+			<figure class="my-flex-block4">
+				<img class="img4" src="kotiko.jpg">
+				<figcaption>Сама доброта</figcaption>
+			</figure>
 
-		<figure class="">
-			<p><img src="kotik.jpg"></p>
-			<figcaption>Пушистая грация</figcaption>
-		</figure>
+			<figure class="my-flex-block5">
+				<img class="img5" src="kotik.jpg">
+				<figcaption>Пушистая грация</figcaption>
+			</figure>
+
+			<figure class="my-flex-block6">
+				<img class="img6" src="kotokyc.png">
+				<figcaption>Кусь</figcaption>
+			</figure>
+		</div>
+
+		<div class="flex-container3">
+			<figure class="my-flex-block">
+				<img class="img7" src="kotyara.jpg">
+				<figcaption>Недовольно-упрекающий</figcaption>
+			</figure>
+
+			<figure class="my-flex-block">
+				<img class="img8" src="kotosup.jpg">
+				<figcaption>Котожидкость</figcaption>
+			</figure>
+		</div>
 	</main>
 
 	<footer class="footer">
-    	<p>Aвтор работы: ШУНАЕВА ЕКАТЕРИНА АЛЕКСЕЕВНА</p>
+    	<h3>Aвтор работы: ШУНАЕВА ЕКАТЕРИНА АЛЕКСЕЕВНА</h3>
     </footer>
 </body>
 </html>
