--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 	</header>
 
 	<main>
+		<p> display: flex;
+  			<br>flex-direction: column;
+  			<br>justify-content: flex-end;
+  			<br>align-items: flex-end;
+  			<br>align-content: flex-end;
+  			<br>flex-wrap: nowrap;</p>
 		<div class="flex-container">
 			<figure class="my-flex-block">
 				<img class="img1" src="kotiki.jpg">
@@ -24,11 +30,16 @@
 			</figure>
 
 			<figure class="my-flex-block">
-				<img class="img3" src="kotiki-12.jpg">
+				<img class="img3" src="kotoki-12.jpg">
 				<figcaption>Милая конфетка</figcaption>
 			</figure>
 		</div>
 
+		<p> display: flex;
+  			<br>flex-direction: row;
+  			<br>align-items: center;
+  			<br>justify-content: flex-end;</p>
+  			<p>Изменен порядок изображений с помощью "order"</p>
 		<div class="flex-container2">
 			<figure class="my-flex-block4">
 				<img class="img4" src="kotiko.jpg">
@@ -36,16 +47,20 @@
 			</figure>
 
 			<figure class="my-flex-block5">
-				<img class="img5" src="kotik.jpg">
+				<img class="img5" src="kotic.jpg">
 				<figcaption>Пушистая грация</figcaption>
 			</figure>
 
 			<figure class="my-flex-block6">
-				<img class="img6" src="kotokyc.png">
+				<img class="img6" src="kotokyc.jpg">
 				<figcaption>Кусь</figcaption>
 			</figure>
 		</div>
 
+		<p>display: flex;
+  			<br>align-content: flex-start;
+  			<br>align-items: flex-start;
+  			<br>flex-flow: column nowrap;</p>
 		<div class="flex-container3">
 			<figure class="my-flex-block">
 				<img class="img7" src="kotyara.jpg">
